dark mode fix

--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -220,6 +220,7 @@ body {
 
 .dark .messageBox {
   background-color: #292929;
+  background-image: none;
   border-color: white;
 }
 
